--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 language: generic
-
+ENV CI=true
 before_install:
   - docker build -t frontend -f Dockerfile .
 
